# qa_auto_hw_2

./: README.md  pyproject.toml
app/: main.py
