[tool.poetry]
name = "app"
version = "0.1.0"
description = "homework 2"
authors = ["v.khadyev <v.khadyev@tinkoff.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
isort = "^5.12.0"
black = "^23.10.1"
flake8 = "^6.1.0"
pyproject-flake8 = "^6.1.0"

[tool.isort]
profile = "black"

[tool.black]
line-length = 79
target_version = ["py310"]

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203"]
max-complexity = 10
exclude = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
